v0.24.0/_sources/reference/_autoapi/docbuild/models/config/env/EnvConfig.rst.txt
docbuild.models.config.env.EnvConfig
====================================

.. py:class:: docbuild.models.config.env.EnvConfig(/, **data: Any)

   Bases: :py:obj:`pydantic.BaseModel`

   .. autoapi-inheritance-diagram:: docbuild.models.config.env.EnvConfig
      :parts: 1


   Root model for the environment configuration (env.toml).


   .. py:attribute:: model_config

      Configuration for the model, should be a dictionary conforming to [`ConfigDict`][pydantic.config.ConfigDict].



   .. py:attribute:: general
      :type:  EnvGeneral
      :value: None


      General application settings.



   .. py:attribute:: paths
      :type:  EnvPaths
      :value: None


      File system paths.



   .. py:attribute:: build
      :type:  EnvBuild
      :value: None


      Build process settings.



   .. py:attribute:: xslt
      :type:  EnvXslt
      :value: None


      XSLT processing parameters.



   .. py:method:: from_dict(data: dict[str, Any]) -> Self
      :classmethod:


      Create an EnvConfig instance from a dictionary.



   .. py:method:: get_default_config(resolve_placeholders: bool = True) -> dict[str, Any]
      :classmethod:


      Generate the default environment configuration from the model.

      :param resolve_placeholders: If True, resolve placeholders in the config.
      :return: The default configuration as a dictionary.


